# fastkmers

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: cli.rs  test.fasta  test.fastq
