[package]
name = "fastkmers"
version = "0.1.0"
authors = ["Angel Angelov <aangeloo@gmail.com>"]
repository = "https://github.com/angelovangel/fastkmers"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
flate2 = "1.0.18"
clap = "~2.33.3"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "*"