[package]
name = "fastkmers"
version = "0.1.3"
authors = ["Angel Angelov <aangeloo@gmail.com>"]
repository = "https://github.com/angelovangel/fastkmers"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.25"
serde_json = "*"
regex = "1"
probminhash = "0.1.5"
kseq = "0.5.3"
itertools = "0.10.3"
rayon = "1.5"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1.0"